2006-12-05  Kirby White  <KWhiteRight@gmail.com>

Reviewed and landed by Alexey.

        http://bugs.webkit.org/show_bug.cgi?id=11681
        Don't select the first option when resetting a listbox-style form
        control (i.e., a multi-select control or one with size > 1) that
        has no default selection.

        Test: fast/dom/HTMLSelectElement/listbox-select-reset.html

        * html/HTMLSelectElement.cpp:
        (WebCore::HTMLSelectElement::reset):



Canonical link: https://commits.webkit.org/15122@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18019 268f45cc-cd09-0410-ab3c-d52691b4dbfc